# chemunited-orchestrator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.coredraw/: ADC.cdr  AutoSample.cdr  BPR.cdr  Backup_of_BottleAccess.cdr  Backup_of_BubbleSensor.cdr  Backup_of_FlowMeter.cdr  Backup_of_RELAY.cdr  Backup_of_Separator.cdr  Backup_of_SyringeBarrel.cdr  Backup_of_SyringePlunger.cdr  BottleAccess.cdr  BottlePressureAccess.cdr  BubbleSensor.cdr  CustomFlask.cdr  DAC.cdr  Distribuitor.cdr  FlaskJacket.cdr  FlowMeter.cdr  FlowReactorBase.cdr  GlassBottle.cdr  HPLC.cdr  HPLCPump.cdr  IRControl.cdr  LoopBase.cdr  MSControl.cdr  MassFlowControl.cdr  NMRControl.cdr  PT100.cdr  Peltier.cdr  PhotoLeds.cdr  Power.cdr  PressureControl.cdr  PressureSensor.cdr  RELAY.cdr  RotaryValve.cdr  Separator.cdr  SolenoidValve.cdr  SolenoidValve2Way.cdr  SourceSink.cdr  SyringeBarrel.cdr  (+8 more)
.github/workflows/: pre-commit.yml  publish.yml  security.yml
.tmp_manual_parameters/: mutations.py  parameters.py  parameters_add.py
example/: AGA.chemunited  Dani.chemunited  RTD.chemunited  SugarPlatform.chemunited  complete.chemunited  first_experiment.chemunited  test_sim.chemunited  test_valve.chemunited  transfer.chemunited
simulations/: Process_20260724_105045.db
src/chemunited/: __main__.py  monitor.py  setup.py
src/chemunited/connectivity/: graph.py  online_list.py  openapi_commands.py
src/chemunited/core/: README.md
src/chemunited/core/common/: __init__.py  constant.py  enums.py  metadata.py
src/chemunited/core/components/: __init__.py  component.py  enums.py  flow_source.py  internals.py  junction.py  plugflow.py  pressure_control.py  pressure_regulator.py  valve.py  vessel.py
src/chemunited/core/compounds/: __init__.py  entity.py  pockets.py  registry.py
src/chemunited/core/connections/: __init__.py  edge.py  enums.py
src/chemunited/core/docs/: chemunited-core-architecture.drawio
src/chemunited/core/examples/: README.md  build_valve_graph.py
src/chemunited/core/figure_registry/: __init__.py  pipes.py  rotary_valve.py  solenoid_valve.py  technical.py  thermal.py  vessels.py
src/chemunited/core/utils/: __init__.py  internal_quantity.py
src/chemunited/draw/: graph.py  tree_add.py
src/chemunited/elements/: __init__.py  access.py  pool_commands.py
src/chemunited/elements/component/: __test_component.py  component_factory.py  connectivity.py  graph_item.py
src/chemunited/elements/compounds/: __init__.py  compound_dialog.py  compound_list.py  compounds_widget.py  coolprop_lookup.py  iventory_status.py
src/chemunited/elements/connection/: __connection_test.py  __init__.py  connection.py
src/chemunited/elements/reactions/: __init__.py  model.py  reaction_dialog.py  reaction_list.py  reactions_widget.py
src/chemunited/mcp/: instructions.md  project_files.py  qt_bridge.py  server.py
src/chemunited/monitoring/: execution_api_process.py  graph.py  pool_log_tailer.py  process_list.py  status_animated.py  summary.py
src/chemunited/orchestrator/: __init__.py  connectivity.py  core.py  draw.py  execution.py  inventory_state.py  project_file.py  protocols.py
src/chemunited/pre_run/: dashboard_launcher.py  pre_run_frame.py  process_list.py  protocols_historic.py  protocols_hystoric.py  summary_window.py
src/chemunited/project/: README.md  git_manager.py  manifest.py  platform_svg.py  recent.py  session.py  storage.py  writer.py
src/chemunited/protocols/: graph.py  process_list.py
src/chemunited/protocols/workflows/: README.md  controller.py  editor.py  node_parameters_dialog.py  process_workflow.py  workflow_frames.py  workflow_rules.py  workflow_widget.py  workflows.drawio
src/chemunited/qt/: __main__.py  monitor.py  setup.py
src/chemunited/qt/connectivity/: graph.py  online_list.py
src/chemunited/qt/draw/: graph.py  manager.py  tree_add.py
src/chemunited/qt/mcp/: MCP_CLIENT_CONFIG.md  __init__.py  instructions.md  project_files.py  qt_bridge.py  server.py
src/chemunited/qt/monitoring/: execution_api_process.py  graph.py  process_list.py  status_animated.py  summary.py
src/chemunited/qt/orchestrator/: __init__.py  connectivity.py  core.py  draw.py  execution.py  main.py  orchestrator.py  project_file.py  protocols.py
src/chemunited/qt/pre_run/: pre_run_frame.py  process_list.py  protocols_hystoric.py  summary_window.py
src/chemunited/qt/project/: README.md  git_manager.py  manifest.py  platform_svg.py  recent.py  session.py  storage.py  writer.py
src/chemunited/shared/: icon.py
src/chemunited/simulation/: __init__.py  final_state.py  graph_simulation.py  playback.py  simulate_report.py
src/chemunited/utils/: flowchem_listener.py  math_functions.py  update_dialog.py  version_check.py
src/chemunited/workflow/: __init__.py  compiler.py  models.py  monitoring.py  process.py  terminal.py
tests/: conftest.py  test_package_data.py
tests/core/components/: test_inventory_nodes.py
tests/qt/: conftest.py  test_online_list.py  test_openapi_commands.py
tests/qt/elements/: test_compound_list.py  test_compound_lookup.py  test_reactions.py  test_syringepump_graph.py
tests/qt/mcp/: test_project_files.py
tests/qt/monitoring/: test_execution_api_process.py  test_process_list.py  test_summary.py
tests/qt/orchestrator/: test_add_connection.py  test_all_components.py  test_core.py  test_execution.py  test_setup_window.py
tests/qt/parameters/: test_bool_card_text.py  test_main_parameters_editor.py  test_typed_array_parameters.py
tests/qt/project/: test_git_manager.py  test_platform_svg.py  test_process_workflow.py  test_recent_projects.py  test_session.py  test_storage.py
tests/qt/protocols/: test_script_drop_insert.py  test_status_bar.py  test_valve_protocols.py  test_workflow_editor_focus.py  test_workflow_frames.py  test_workflow_rules.py
tests/qt/shared/: test_editor_base.py  test_frame_base.py  test_graph_background.py  test_loggings_widget.py  test_process_item.py  test_segment_widget.py
tests/qt/simulation/: test_final_state.py  test_playback.py  test_simulate_report.py
tests/workflow/: test_api_logging.py
(+317 files in other folders)
