[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemunited"
version = "0.0.1"
description = "Visual interface for designing and executing chemistry automation workflows on top of FlowChem."
readme = "README.md"
requires-python = ">=3.13"
license =  { text = "MIT" }
keywords = ["control", "automation", "process"]
authors = [
    { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
maintainers = [
  { name = "Samuel Vitor Saraiva", email = "samuel.saraiva@mpikg.mpg.de" }
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    # sub-packages (provide the entire runtime engine)
    "chemunited-sim @ git+https://github.com/automatedchemistry/chemunited-sim.git",
    "chemunited-workflow @ git+https://github.com/automatedchemistry/chemunited-workflow.git",
    "PyQt-Fluent-Widgets>=1.7.0,<2.0",  # Qt UI
    "QScintilla>=2.14.0",
    "platformdirs>=4.0",
    "gitpython>=3.1.41",
    "zeroconf>=0.131.0",
    "rich-click>=1.7",
    "black>=25.1.0,<27.0", # used programmatically to format user protocol
    "loguru>=0.7",  # explicitly re-declared
]

[project.scripts]
chemunited = "chemunited.qt.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
    "ruff>=0.11.2",
    "pytest>=8.0",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
qt_api = "pyqt5"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chemunited*"]
namespaces = true

[tool.setuptools.package-data]
"chemunited.qt.mcp" = ["*.md"]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = '''
(
    ^/.venv
  | ^/build
  | ^/src/chemunited/qt/shared/resources
)
'''

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    ".venv",
    "build",
    "src/chemunited/qt/shared/resources",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.13"
files = ["src/chemunited"]
exclude = '(^\.venv/|^build/|^src/chemunited/qt/shared/resources/)'
mypy_path = "src"
namespace_packages = true
pretty = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "PyQt5",
    "PyQt5.*",
    "black",
    "chemunited_workflow",
    "chemunited_workflow.*",
    "git",
    "mcp",
    "mcp.*",
    "qfluentwidgets",
    "qframelesswindow",
    "networkx",
    "numpy",
    "scipy",
    "scipy.*",
    "loguru",
    "pyvis",
    "pyvis.*",
    "requests",
    "requests.*",
    "rich",
    "rich.*",
    "rich_click",
    "uvicorn",
    "uvicorn.*",
    "zeroconf",
    "pydantic_pint",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chemunited.qt.shared.resources.resources_rc"]
ignore_errors = true
